<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rask.app.ui.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.rask.app.ui.stats.StatsFragment"
        android:label="@string/nav_stats" />

    <fragment
        android:id="@+id/nav_goals"
        android:name="com.rask.app.ui.goals.GoalsFragment"
        android:label="@string/nav_goals" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.rask.app.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />
</navigation>
